# language_identification

./: .gitignore  README.md  pyproject.toml
data/processed/hq_multilingual/: base_dataset.parquet  dataset_summary.csv  processed_dataset.parquet  train_clean_all_buckets.csv
data/processed/sample_run/: base_dataset.parquet  dataset_summary.csv  processed_dataset.parquet
notebooks/: short_text_language_identification_walkthrough.ipynb
paper/: main.tex  references.bib
results/: FINAL_ANALYSIS.md  per_language_results.csv  results.csv
results/baselines/: model_manifest.csv  train_config.json
results/baselines/models/: char_svm_len3.joblib  tfidf_lr_len10.joblib  tfidf_lr_len3.joblib  tfidf_lr_len5.joblib
results/error_analysis/: fasttext_len3_typo_test_confusion_matrix.csv  fasttext_len3_typo_test_predictions.csv  fasttext_len3_typo_test_top_confusions.csv
results/plots/: accuracy_summary.csv
src/language_identification/: cli.py
src/language_identification/data/: prepare.py
src/language_identification/evaluation/: baselines.py  plots.py
src/language_identification/models/: fasttext_baseline.py  sklearn_baselines.py
src/language_identification/scripts/: analyze_results.py  error_analysis.py  evaluate.py  evaluate_per_language.py  export_train_csv.py  plot_results.py  prepare_dataset.py  train_baselines.py
