[project]
name = "language-identification"
version = "0.1.0"
description = "Short-text language identification experiments for EN/RO/FR/DE/ES."
readme = "README.md"
authors = [
    { name = "andreicosmin02", email = "andrei.achim.6669@gmail.com" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets>=4.0.0",
    "fasttext-wheel>=0.9.2",
    "matplotlib>=3.10.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.7.0",
    "tqdm>=4.67.0",
    "unidecode>=1.4.0",
    "zstandard>=0.23.0",
]

[project.scripts]
language-identification = "language_identification.cli:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "jupyterlab>=4.4.0",
    "ruff>=0.12.0",
]
transformers = [
    "accelerate>=1.10.0",
    "evaluate>=0.4.0",
    "torch>=2.8.0",
    "transformers>=4.55.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
